styled the page

--- a/artisan.html
+++ b/artisan.html
@@ -11,12 +11,11 @@
 </head>
 
 <body>
-  <div class="container">
+  <!-- <div class="container"> -->
     <div class="jumbotron">
       <h1>Meet Our Fundis </h1>
-    </div>
-    <div class="show" id="shown">
-      <div class="row">
+    </div>  
+      <div class="row" id="cards">
         <div class="col-md-3">
           <div class="tailor">
             <div class="cards">
@@ -75,7 +74,7 @@
         <!-- end of well -->
       <!-- </div> -->
       <!-- end of text row -->
-    </div>
+
 
     <div class="row" id="tailors">
       <div class="col-md-4">
@@ -260,7 +259,7 @@
       <!-- end of tailor 3  -->
     </div>
     <!-- end of row -->
-  </div>
+  <!-- </div> -->
   <!-- end of container -->
   <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
   <script src="js/app.js" type="text/javascript"></script>
