added style changes

--- a/artisan.html
+++ b/artisan.html
@@ -13,9 +13,11 @@
 <body>
   <!-- <div class="container"> -->
     <div class="jumbotron">
+      <div class="background">
+      </div>
       <h1>Meet Our Fundis </h1>
-    </div>  
-      <div class="row" id="cards">
+    </div>
+      <div class="row" id="cardRow">
         <div class="col-md-3">
           <div class="tailor">
             <div class="cards">
@@ -166,7 +168,7 @@
       </div>
       <!-- end of tailor 3  -->
     </div>
-    <!-- end of row -->
+    <!-- end of row 2-->
 
     <div class="row" id="carpenters">
       <div class="col-md-4">
@@ -212,7 +214,7 @@
       </div>
       <!-- end of tailor 3  -->
     </div>
-    <!-- end of row -->
+    <!-- end of row 3-->
 
     <div class="row" id="mechanics">
       <div class="col-md-4">
@@ -258,7 +260,7 @@
       </div>
       <!-- end of tailor 3  -->
     </div>
-    <!-- end of row -->
+    <!-- end of final row -->
   <!-- </div> -->
   <!-- end of container -->
   <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
