--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="profile.css" rel="stylesheet" type="text/css">
+  <link href="css/profile.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/script.js"></script>
   <title>Fundi</title>
