--- a/index.html
+++ b/index.html
@@ -3,21 +3,95 @@
   <head>
     <meta charset="utf-8">
     <title>Image Slider Design</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
   </head>
   <body>
-     <div class="slide-container">
-      <div id="sliderbox">
-        <img src="img/carpenters1.jpeg"/ class="slider-image">
-        <img src="img/carpenters2.jpeg"/ class="slider-image">
-        <img src="img/electrians1.jpeg"/ class="slider-image">
-        <img src="img/electrians2.jpeg"/ class="slider-image">
-        <img src="img/mechanics1.jpeg"/ class="slider-image">
-        <img src="img/mechanics2.jpeg"/ class="slider-image">
-        <img src="img/tailors1.jpeg"/ class="slider-image">
-        <img src="img/tailors2.jpeg"/ class="slider-image">
-      </div>
-     </div>
+  <div class="col-sm-3">
+  </div>
+  <div class="col-sm-6">
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
 
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="img/carpenters1.jpg" alt="..." width="100%" height="30%">
+    </div>
+    <div class="item">
+      <img src="img/carpenters3.jpeg" alt="..." width="100%"height="30%" >
+    </div>
+    <div class="item">
+      <img src="img/tailors1.jpg" alt="..." width="100%" height="30%">
+    </div>
+    <div class="item">
+      <img src="img/tailors3.jpeg" alt="..."width="100%" height="30%">
+    </div>
+    <div class="item">
+      <img src="img/electricians3.jpeg" alt="..."width="100%" height="30%">
+    </div>
+    <div class="item">
+      <img src="img/fundi.jpg" alt="..."width="100%" height="30%">
+    </div>
+    <div class="item">
+      <img src="img/mechanics3.jpg" alt="..."width="100%" height="30%">
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+  </div>
+  </div>
+  <div class="col-sm-3">
+  </div>
   </body>
 </html>
