--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width" , initial-scale="1.0">
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="css/index.css" type="text/css">
   <link rel="stylesheet" href="css/ivy.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Fundi</title>
 
 </head>
@@ -33,7 +32,7 @@
       <h3>About Fundi</h3>
       <div class="row" id="one">
         <div class="col-md-5">
-          <img src="/home/moringa/Documents/moringa-school-projects/ips/fundi/development/fundi/img/about.jpeg" alt="about image" height="250px" width="350px">
+          <img src="/img/about.jpeg" alt="about image" height="250px" width="350px">
         </div>
         <div class="col-md-6" id="two">
           <h2>Who we serve</h2>
@@ -129,10 +128,10 @@
         <div class="row" id="tailors">
           <div class="col-md-4">
             <div class="profile">
-              <img src="https://images.pexels.com/photos/462680/pexels-photo-462680.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Ron" style="width:100%">
-              <h1>Ron Onyonka</h1>
+              <img src="img/t2.jpeg" alt="Ron" style="width:100%">
+              <h1>Njoroge Kimani</h1>
               <p class="title">Tailor</p>
-              <p>Onyonka Designs</p>
+              <p>Njoro Fashion</p>
               <div>
                 <a href="https://twitter.com/Ron_onyonka"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.facebook.com/ron.onyonka"><i class="fa fa-facebook"></i></a>
@@ -144,10 +143,10 @@
           <!-- end of tailor 1  -->
           <div class="col-md-4">
             <div class="profile">
-              <img src="https://images.pexels.com/photos/462680/pexels-photo-462680.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Ron" style="width:100%">
-              <h1>Ron Onyonka</h1>
+              <img src="img/t1.jpeg" alt="Ron" style="width:100%">
+              <h1>Wilberforce Omollo</h1>
               <p class="title">Tailor</p>
-              <p>Onyonka Designs</p>
+              <p>Wilberforce Designs</p>
               <div>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -159,10 +158,10 @@
           <!-- end of tailor 2  -->
           <div class="col-md-4">
             <div class="profile">
-              <img src="https://images.pexels.com/photos/462680/pexels-photo-462680.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Ron" style="width:100%">
-              <h1>Ron Onyonka</h1>
+              <img src="img/t3.jpg" alt="Ron" style="width:100% ; height:170px">
+              <h1>Winnie Saringi</h1>
               <p class="title">Tailor</p>
-              <p>Onyonka Designs</p>
+              <p>Medal Designs</p>
               <div>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -178,10 +177,10 @@
         <div class="row" id="electricians">
           <div class="col-md-4">
             <div class="profile">
-              <img src="https://images.pexels.com/photos/462680/pexels-photo-462680.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Ron" style="width:100%">
-              <h1>Ron Onyonka</h1>
+              <img src="img/e1.JPEG" alt="Ron" style="width:100%">
+              <h1>Joseph Ndwiga</h1>
               <p class="title">Electrician</p>
-              <p>Onyonka Designs</p>
+              <p>Ndwiga Tech</p>
               <div>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -208,10 +207,10 @@
           <!-- end of tailor 2  -->
           <div class="col-md-4">
             <div class="profile">
-              <img src="https://images.pexels.com/photos/462680/pexels-photo-462680.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Ron" style="width:100%">
-              <h1>Ron Onyonka</h1>
+              <img src="img/electricians1.jpeg" alt="Ron" style="width:100%">
+              <h1>David Makhanu</h1>
               <p class="title">Electrician</p>
-              <p>Onyonka Designs</p>
+              <p>Watinguyaz</p>
               <div>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -354,7 +353,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="footericons">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-google"></a>
