--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <meta name="viewport" content="width=device-width" , initial-scale="1.0">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="home.css">
@@ -14,13 +15,18 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="home"></div>
-        <div id="home">
-            <h5>Fundi</h5>
-            <h5>Putting the fun in Fundi</h5>
+    <div id="landingpage">
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">Home</a>
+            <a href="#about">About</a>
+            <a href="#artisans">Artisans</a>
+            <a href="#contacts">Contacts</a>
         </div>
+        <h1 id="block">Fundi</h1>
+        <span id="menu" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
     </div>
+
     <div class="container">
         <div id="about">
             <div style="text-align:center">
@@ -295,7 +301,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container2">
+                <div class="container2" id="contacts">
                     <div style="text-align:center">
                         <div class="jumbotron" style="margin-top: 100px;">
                             <div class="background">
