--- a/index.html
+++ b/index.html
@@ -4,43 +4,48 @@
 <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <meta name="viewport" content="width=device-width" , initial-scale="1.0">
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="css/index.css" type="text/css">
   <link rel="stylesheet" href="css/ivy.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Fundi</title>
-
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="home">
-
+  <div id="landingpage">
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="#">Home</a>
+      <a href="#about">About</a>
+      <a href="#artisans">Artisans</a>
+      <a href="#contacts">Contacts</a>
     </div>
-    <div id="home">
-      <h5>Fundi</h5>
-      <h5>Putting the fun in Fundi</h5>
-    </div>
-  </div>
-
+    <h1 id="block">Fundi</h1>
+    <span id="menu" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
   </div>
 
   <div class="container">
     <div id="about">
-      <h3>About Fundi</h3>
+      <div style="text-align:center">
+        <div class="jumbotron">
+          <div class="background">
+            <h1 id="fundi">About Fundi</h1>
+          </div>
+        </div>
+      </div>
       <div class="row" id="one">
         <div class="col-md-5">
-          <img src="/img/about.jpeg" alt="about image" height="250px" width="350px">
+          <img src="./img/about.jpeg" style="width:100%" style="height:100%">
         </div>
         <div class="col-md-6" id="two">
           <h2>Who we serve</h2>
-          <p>We serve clients looking for quality services providers online by providing a platform where our clients have access to visionary businesses and entrepreneurs who have something of value to share with their audience – artisans who are
-            focused on delivering value services and making a difference in the world through their unique services.</p>
+          <p>We serve clients looking for quality services providers online by providing a platform where our clients have access to visionary businesses and entrepreneurs who have something of value to share with their audience – artisans who
+            are focused on delivering value services and making a difference in the world through their unique services.</p>
         </div>
       </div>
-
       <div id="five">
         <div class="row" id="three">
           <h3>Our Service</h3>
@@ -69,14 +74,12 @@
         </div>
       </div>
     </div>
-
-
     <div class="container">
       <div id="artisans">
         <div class="jumbotron">
           <div class="background">
+            <h1 id="fundi">Meet Our Fundis </h1>
           </div>
-          <h1 id="fundi">Meet Our Fundis </h1>
         </div>
         <div class="row" id="cardRow">
           <div class="col-md-3">
@@ -89,7 +92,6 @@
               </div>
             </div>
           </div>
-          <!-- end of tailor -->
           <div class="col-md-3">
             <div class="electrician">
               <div class="cards">
@@ -100,7 +102,6 @@
               </div>
             </div>
           </div>
-          <!-- end of electrician-->
           <div class="col-md-3">
             <div class="carpenter">
               <div class="cards">
@@ -111,7 +112,6 @@
               </div>
             </div>
           </div>
-          <!-- end of carpenter -->
           <div class="col-md-3">
             <div class="mechanic">
               <div class="cards">
@@ -122,9 +122,7 @@
               </div>
             </div>
           </div>
-          <!-- end of mechanic -->
         </div>
-
         <div class="row" id="tailors">
           <div class="col-md-4">
             <div class="profile">
@@ -317,43 +315,41 @@
               <a href="profile.html"><button>Get my Services</button></a>
             </div>
           </div>
-          <!-- end of tailor 3  -->
         </div>
 
-        <!-- end of final row -->
-        <!-- </div> -->
-        <!-- end of container -->
         <div class="container2">
           <div style="text-align:center">
-            <h2>Contact Us</h2>
-            <p>Swing by for a cup of coffee, or leave us a message:</p>
+            <div class="jumbotron" style="margin-top: 100px;">
+              <div class="background" style="margin-bottom: 100px;" >
+                <h2>Contact Us</h2>
+              </div>
+            </div>
           </div>
           <div class="row">
             <div class="column">
-              <img src="contacts.jpeg" style="width:100%">
+              <img src="./img/mechanics3.jpg" style="width:100%; height: auto;">
             </div>
             <div class="column">
               <form action="/action_page.php">
                 <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <input type="text" id="fname" name="firstname" placeholder="Your name.."><br><br>
                 <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <input type="text" id="lname" name="lastname" placeholder="Your last name.."><br><br>
                 <label for="country">County</label>
                 <select id="country" name="country">
                   <option value="australia">Nairobi</option>
                   <option value="canada">Machakos</option>
                   <option value="usa">Kisumu</option>
                   <option value="usa">Machakos</option>
-                </select>
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                </select><br><br>
+                <label for="subject">Subject</label><br>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea><br><br>
                 <input id="contact-submit" type="submit" value="Submit">
               </form>
             </div>
           </div>
         </div>
-
-        <div class="footericons">
+        <div style="text-align:center" style="margin-bottom: 50px;">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-google"></a>
@@ -362,12 +358,11 @@
           <a href="#" class="fa fa-instagram"></a>
           <a href="#" class="fa fa-skype"></a>
         </div>
-        <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
-        <script src="js/app.js" type="text/javascript"></script>
       </div>
     </div>
   </div>
-
+  <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+  <script src="js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
